# PA2025

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  script.py
.streamlit/: config.toml
agid-app/: Dockerfile  app.py  styles.css  ui.py
agid-app/pages/: 1_Training.py
agid-app/src/: requirements.txt
agid-app/src/pages/: 1_Training.py
agid_app/: ui.py
aigen/: README.md  main.py  requirements.txt  utils.py  valid_data.py
front/: Dockerfile
front/src/: 0_Detector.py  logic.py  ui.py  utils.py
front/src/pages/: 1_Training.py  2_History.py
mini-keras/: Cargo.toml
mini-keras/src/: kmeans.rs  lib.rs  linear_model.rs  linear_model_gradient.rs  main.rs  mlp.rs  rbf.rs  rbf_naive.rs  svm.rs  test.py  tests.rs  utils.rs
pyrust/: Dockerfile.viewer  binding_test.py  experiment.py  pyproject.toml  scripts.py  test_cases.ipynb  utils.py
pyrust/database/: connect.py  mongo.py
pyrust/src/: experiment.py  load_fiftyone.py  utils.py
pyrust/src/api/: app.py  main.py  models.py  schemas.py
pyrust/src/api/controllers/: evaluating.py  training.py
pyrust/src/api/service/: linear_classification.py  training_job.py
pyrust/src/api/service/evaluators/: linear.py  mlp.py  rbf.py  svm.py
pyrust/src/api/service/trainers/: base.py  linear.py  mlp.py  rbf.py  svm.py
pyrust/src/database/: connect.py  mongo.py
pyrust/src/scripts/: change_extension.py  delete_missing.py
pyrust/src/tests/: binding_test.py  test_cases.ipynb
pyrust/src/utils/: data_loader.py  env.py  logger.py
python/: binding.py
scraper/: Dockerfile  requirements.txt
scraper/src/: main.py  models.py  utils.py
