[project]
name = "PA2025"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "diffusers==0.33.1",
    "fiftyone==1.5.2",
    "flask==3.1.0",
    "numpy==2.3.0",
    "pillow==11.2.1",
    "pymongo==4.9.2",
    "streamlit==1.45.0",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
]
