[package]
name = "mini-keras"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
numpy = "0.20"
pyo3 = { version = "0.20", features = ["extension-module"] }
rand = "0.9.1"

[lib]
name = "mini_keras"
crate-type = ["cdylib"]

[[bin]]
name = "mini-keras"
path = "src/mlp.rs"
